# focworld-client-cpp

./: .gitignore  CMakeLists.txt  build.bat  installer.iss  register_protocol.reg  vcpkg.json  version.json
.github/workflows/: build.yml
src/: AnimationManager.h  AutoUpdater.cpp  AutoUpdater.h  Board.cpp  Board.h  Card.h  NetworkManager.cpp  NetworkManager.h  WindowsUtils.cpp  WindowsUtils.h  main.cpp
